fix: bug fix on scrollbar for phone view on featured_card_wrapper

--- a/styles/section/_hero-section.scss
+++ b/styles/section/_hero-section.scss
@@ -9,7 +9,6 @@
   @include phone {
     height: 100%;
   }
-  
 }
 
 .gradient-effect {
@@ -51,7 +50,6 @@
     right: 0;
   }
 
-
   &__image {
     width: 100%;
     height: 100%;
@@ -81,7 +79,6 @@
   @include tablet {
     justify-content: flex-start;
     padding: 2rem 0% 2rem 8%;
-
   }
 
   &__top-container {
@@ -93,8 +90,6 @@
     @include tablet {
       width: 55%;
     }
-    
-  
   }
 
   &__title {
@@ -124,12 +119,11 @@
   }
 
   &__bottom-container {
-    @extend %align-center;
+    display: flex;
     justify-content: space-between;
     gap: 4rem;
     @include phone {
       flex-direction: column-reverse;
-      align-items: flex-start;
       justify-content: center;
       gap: 3rem;
     }
@@ -137,7 +131,7 @@
   &__scroll-down-wrapper {
     @extend %align-center;
     justify-content: center;
-    
+
     margin-top: 4rem;
     @include phone {
       width: 100%;
@@ -145,7 +139,6 @@
     @include tablet {
       margin-left: 5%;
     }
-  
   }
   &__circular-div {
     @extend %align-center;
